--- a/demo/index.html
+++ b/demo/index.html
@@ -28,9 +28,11 @@
       }
 
       .sized {
-        width: 65%;
-        height: 50%;
-        left: 64px;
+        width: 640px;
+        height: 480px;
+        position: fixed;
+        left: 1.0em;
+        top: 16em;
       }
     </style>
   </head>
