--- a/spiral-coder.html
+++ b/spiral-coder.html
@@ -147,6 +147,10 @@ Example:
         value: 'spiral-coder'
       },
 
+      /**
+       * Callback function for the 'render-complete' event.
+       * @type {Function}
+       */
       onRenderComplete: {
         type: Function,
         value: null
