--- a/spiral-coder.html
+++ b/spiral-coder.html
@@ -2,15 +2,16 @@
 Copyright (c) 2015 Hongchan Choi. All rights reserved.
 -->
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../paper-styles/paper-styles.html">
 <link rel="import" href="../iron-fit-behavior/iron-fit-behavior.html">
-<link rel="import" href="../paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../paper-button/paper-button.html">
-<link rel="import" href="../paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../paper-dialog/paper-dialog.html">
+<link rel="import" href="../paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../paper-slider/paper-slider.html">
+<link rel="import" href="../paper-styles/paper-styles.html">
+<link rel="import" href="../paper-toolbar/paper-toolbar.html">
 
 <!-- CodeMirror -->
 <script src="../CodeMirror/lib/codemirror.js"></script>
@@ -102,7 +103,8 @@ Example:
     is: 'spiral-coder',
 
     behaviors: [
-      Polymer.IronFitBehavior
+      Polymer.IronFitBehavior,
+      Polymer.IronResizableBehavior
     ],
 
     properties: {
@@ -155,6 +157,10 @@ Example:
         type: Function,
         value: null
       }
+    },
+
+    listeners: {
+      'iron-resize': '_onResize'
     },
 
 
