fixed resize issue, styles; updated dependencies

--- a/spiral-coder.html
+++ b/spiral-coder.html
@@ -54,7 +54,7 @@ Example:
     }
 
     #eSettings {
-      border-radius: 1em;
+      border-radius: 0.em;
       max-width: 300px;
       width: 300px;
       padding: 0 0.5em 0.75em 0.5em;
@@ -66,15 +66,16 @@ Example:
     }
 
     paper-toolbar {
-      --paper-toolbar-background: var(--google-grey-700);
+      --paper-toolbar-background: #455A64;
     }
 
     paper-button {
+      color: var(--paper-light-green-900);
       background-color: var(--google-grey-300);
     }
 
     paper-button:hover {
-      background-color: var(--paper-light-blue-200);
+      background-color: var(--paper-light-green-200);
     }
   </style>
 
